# quest_engine

./: .gitignore  Box.h  Button.h  CMakeLists.txt  lorem.html  main.cpp
states/: buttons.cpp  helpers.cpp  states.cpp
struct/: Button.h  State.h
utils/: color.cpp
